# Dzik

./: .gitmodules  Dockerfile  README.md  docker_run.sh  env.sh  run_sim.sh  setup_manual.docx  setup_manual.md  start.sh  workflow_manual.md
argo_mini/: CMakeLists.txt  package.xml
argo_mini/config/: amcl.yaml  amcl_conf.yaml  base_global_planner_conf.yaml  base_local_planner.yaml  base_local_planner_conf.yaml  base_local_planner_params.yaml  controllers_info.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_conf.yaml  gmapping_conf.yaml  (+6 more)
argo_mini_hardware_interface/: CMakeLists.txt  package.xml
argo_mini_urdf_4w_drive/: package.xml
argo_mini_urdf_6w_drive/: package.xml
argo_mini_urdf_lamp/: package.xml
argo_mini_urdf_podstawa/: package.xml
argo_mini_urdf_zed/: package.xml
argo_mini_urdf_zed_gimbal/: package.xml
rrt_exploration/: CMakeLists.txt
six_wheel_steering_controller/: CMakeLists.txt  api.txt  classes.txt  package.xml
six_wheel_steering_controller/include/six_wheel_steering_controller/: common.h  drive.h  kinematics.h  mode.h  odometry.h  six_wheel_steering_controller.h  wheel_unit.h
six_wheel_steering_controller/include/six_wheel_steering_controller/math/: point.h
six_wheel_steering_controller/include/six_wheel_steering_controller/modes/: mode1.h  mode2.h
six_wheel_steering_controller/src/: drive.cpp  kinematics.cpp  odometry.cpp  six_wheel_steering_controller.cpp  wheel_unit.cpp
six_wheel_steering_controller/src/math/: point.cpp  vector.cpp  vector.h
six_wheel_steering_controller/src/modes/: mode1.cpp  mode2.cpp
(+67 files in other folders)
