<?xml version="1.0"?>
<package format="2">
  <name>six_wheel_steering_controller</name>
  <version>0.0.0</version>
  <description>The six_wheel_steering_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="przemek@todo.todo">przemek</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <build_depend>four_wheel_steering_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>urdf_geometry_parser</build_depend>

  <build_export_depend>four_wheel_steering_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>


  <export>
    <controller_interface plugin="${prefix}/six_wheel_steering_controller_plugins.xml"/>
  </export>
</package>
